# webots_youbot_ros_controller

./: CMakeLists.txt  README.md  README.md~  manifest.xml
controllers/youbot/: config.xml
includes/base-kinematic/: FourSwedishWheelOmniBaseKinematic.cpp  FourSwedishWheelOmniBaseKinematic.hpp  FourSwedishWheelOmniBaseKinematicConfiguration.cpp  FourSwedishWheelOmniBaseKinematicConfiguration.hpp  WheeledBaseKinematic.hpp
includes/brics_actuator/: CartesianPose.h  CartesianTwist.h  CartesianVector.h  CartesianWrench.h  JointAccelerations.h  JointConstraint.h  JointImpedances.h  JointPositions.h  JointTorques.h  JointValue.h  JointVelocities.h  Poison.h
protos/sensors/kinect/protos/: .Kinect.proto.signature  .KinectWithoutFoot.proto.signature  Kinect.proto  KinectWithoutFoot.proto
ros/launch/: webots.launch
ros/scripts/: webots.sh
src/: Makefile  actuator_arm.cpp  actuator_arm.h  actuator_base.cpp  actuator_base.h  config.cpp  config.h  feedback_publisher.cpp  feedback_publisher.h  hardware.cpp  hardware.h  main.cpp  sensor_camera.cpp  sensor_camera.h  sensor_kinect.cpp  sensor_kinect.h  sensor_laserscanner.cpp  sensor_laserscanner.h  world.cpp  world.h  youbot.cpp  youbot.h
worlds/: Example.wbt
